Completed design of presets.

--- a/NetworkInterfaceConfigurator/App.xaml
+++ b/NetworkInterfaceConfigurator/App.xaml
@@ -14,7 +14,7 @@
                 <ResourceDictionary Source="Resources/Buttons.xaml"/>
                 <ResourceDictionary Source="Resources/ScrollBar.xaml"/>
                 
-                <ResourceDictionary Source="Resources/Preset.xaml"/>
+                <ResourceDictionary Source="Resources/Menu.xaml"/>
                 <ResourceDictionary Source="Resources/ComboBox.xaml"/>
                 <ResourceDictionary Source="Resources/Window.xaml"/>
             </ResourceDictionary.MergedDictionaries>
