ReDefine menu style.

--- a/NetworkInterfaceConfigurator/Resources/Colors.xaml
+++ b/NetworkInterfaceConfigurator/Resources/Colors.xaml
@@ -17,16 +17,16 @@
     <Color x:Key="ColorWhite">#FEFEFE</Color>
 
     <SolidColorBrush x:Key="BrushVeryDarkGray" Color="#202224"/>
-    <Color x:Key="ColorVeryDarkGrey">#202224</Color>
+    <Color x:Key="ColorVeryDarkGray">#202224</Color>
     
     <SolidColorBrush x:Key="BrushDarkGray" Color="#222426"/>
-    <Color x:Key="ColorDarkGrey">#222426</Color>
+    <Color x:Key="ColorDarkGray">#222426</Color>
 
     <SolidColorBrush x:Key="BrushMediumGray2" Color="#363a3d"/>
-    <Color x:Key="ColorMediumGrey2">#363a3d</Color>
+    <Color x:Key="ColorMediumGray2">#363a3d</Color>
     
     <SolidColorBrush x:Key="BrushMediumGray" Color="#c7c7c7"/>
-    <Color x:Key="ColorMediumGrey">#c7c7c7</Color>
+    <Color x:Key="ColorMediumGray">#c7c7c7</Color>
 
     <SolidColorBrush x:Key="BrushLightGrayTranspared" Color="#B2BABCBD"/>
     <Color x:Key="ColorLightGrayTranspared">#B2BABCBD</Color>
