--- a/NetworkInterfaceConfigurator/Resources/ComboBox.xaml
+++ b/NetworkInterfaceConfigurator/Resources/ComboBox.xaml
@@ -123,7 +123,7 @@
                                         <ColorAnimationUsingKeyFrames Storyboard.TargetName="Border"
                                                                       Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
                                             <EasingColorKeyFrame KeyTime="0"
-                                                                 Value="{StaticResource ColorMediumGrey2}" />
+                                                                 Value="{StaticResource ColorMediumGray2}" />
                                         </ColorAnimationUsingKeyFrames>
                                         <ColorAnimationUsingKeyFrames Storyboard.TargetName="Border"
                                                                       Storyboard.TargetProperty="BorderBrush.(SolidColorBrush.Color)">
